# NinsEQ

./: CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/NinsEQ/: Fifo.h  PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
